tests/conformance/typecheck/invalid/nested_fun_return_type_mismatch.ks
// EXPECT: vs
fun f(): Int = { fun bad(): Int = True; bad() }
